# langchain-academy

./: .gitignore  pyproject.toml
module-0/: basics.ipynb
module-1/: chain.ipynb  router.ipynb  simple-graph.ipynb
